--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '>=1.11'
 
     - name: Test
-      run: go test -v -cover ./...
+      run: go test -v -cover -coverprofile=coverage.coverprofile ./...
       
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
